samples/_failures_safe/1761517529_827793_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e52415c8.c: In function ‘main’:
./samples/SAFE/__tmp_e52415c8.c:170:5: error: expected declaration or statement at end of input
  170 |     }
      |     ^
